--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "http://example.org/"
 languageCode = "de-DE"
 title = "SeLi Rahmenbau"
 
-theme = "minimO"
+theme = "minimo"
 
 [params.info]
 description = "SeLi Rahmenbau aus Dörrenbach"
