--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,165 @@
-baseURL = "http://example.org/"
-languageCode = "de-DE"
+baseURL = "http://www.seli-rahmenbau.de"
 title = "SeLi Rahmenbau"
+# for smart copyright line, leave this blank and check [params.copyright]
+copyright = ""
 
 theme = "minimo"
 
+disqusShortname = ""
+googleAnalytics = ""
+
+Paginate = 5
+preserveTaxonomyNames = true
+
+enableRobotsTXT = true # generate robots.txt
+
+# Syntax Highlighting ( https://gohugo.io/content-management/syntax-highlighting/ )
+pygmentsCodefences = true
+
+enableEmoji = true
+
+# Missing translations will default to this content language
+defaultContentLanguage = "de"
+
 [params.info]
-description = "SeLi Rahmenbau aus Dörrenbach"
+description = "..nach Maß in Stahl und Edelstahl"
 title404 = "Hier gibt es nichts zu sehen."
+
+[params.assets]
+favicon = "favicon.ico"
+customCSS = ["css/custom.css"]
+customJS = ["js/custom.js"]
+gopher = "" # used in 404 template ( Generator: https://gopherize.me )
 
 [params.copyright]
 prefix = ""
 holder = "Sebastian Lindler"
 startYear = "2018"
 suffix = ""
+
+[params.settings]
+# date & time format: https://golang.org/pkg/time/
+dateFormat = "2006, Jan 02"
+listDateFormat = "2006, Jan 02"
+archiveDateFormat = "Jan 02"
+hideEntryNavigation = ["page"] # boolean / array of sections
+showReadingTime = true
+showLastmod = true
+taxonomyCloudShuffle = true
+accentColor = "#ffcd00"
+hideMainMenu = false
+
+[params.sidebar]
+enable = true
+
+[params.widgets]
+homepage = ["recent_posts"]
+sidebar = ["about","sidebar_menu","taxonomy_cloud"]
+footer = ["social_menu"]
+
+[params.opengraph.facebook]
+admins = [] # array of Facebook IDs
+appID = ""
+pageID = ""
+
+[params.opengraph.twitter]
+page = "" # Twitter page username
+
+[params.seo]
+# Title Separator: - – — · • * ⋆ | ~ « » < >
+titleSeparator = "•"
+
+#[params.social]
+#codepen = "MunifTanjim"
+#email = "contact@example.com"
+#facebook = "MunifTanjim"
+#github = "MunifTanjim"
+#gitlab = "MunifTanjim"
+#instagram = "MunifTanjim"
+#linkedin = "muniftanjim"
+#twitter = "MunifTanjim"
+#telegram = "MunifTanjim"
+#google_scholar = "qc6CJjYAAAAJ"
+#youtube = "UCT-U0rNerYxItGcuoPX-WYA"
+
+[params.comments]
+enable = false
+
+# Isso: https://posativ.org/isso/
+[params.comments.isso]
+enable = false
+scriptSrc = "" # "https://isso.example.com/js/embed.min.js"
+dataAttrs = "" # "data-isso='https://isso.example.com' data-isso-require-author='true'"
+
+[params.comments.staticman]
+enable = true
+apiEndpoint = "https://api.staticman.net/v2/entry"
+maxDepth = 2
+
+[params.comments.staticman.github]
+username = "MunifTanjim"
+repository = "minimo"
+branch = "master"
+
+# Utterances: https://utteranc.es
+[params.comments.utterances]
+enable = false
+issueTerm = "pathname" # pathname / url / title
+
+[params.comments.utterances.github]
+username = "MunifTanjim"
+repository = "minimo"
+
+[params.search]
+client = "" # algolia / fuse / lunr
+
+[params.search.algolia]
+appId = ""
+indexName = ""
+searchApiKey = ""
+
+[taxonomies]
+author = "authors"
+category = "categories"
+series = "series"
+tag = "tags"
+
+[permalinks]
+page = "/:slug/"
+
+[[menu.main]]
+name = "Rahmenbau"
+weight = -20
+identifier = "rahmenbau"
+url = "/rahmenbau"
+
+[[menu.main]]
+name = "Kurse"
+weight = -10
+identifier = "kurse"
+url = "/kurse"
+
+[[menu.main]]
+name = "Datenschutzerklärung"
+weight = 10
+identifier = "datenschutz"
+url = "/datenschutz"
+
+[[menu.main]]
+name = "Impressum"
+weight = 20
+identifier = "impressum"
+url = "/impressum"
+
+[blackfriday]
+hrefTargetBlank = true
+
+[languages]
+# edit this block for your own language
+[languages.en]
+lang = "en"
+languageName = "English"
+
+[languages.de]
+lang = "de"
+languageName = "Deutsch"
