--- a/config.toml
+++ b/config.toml
@@ -1,171 +1,98 @@
-baseURL = "https://selirahmenbau.github.io"
+baseurl = "https://username.github.io"
+DefaultContentLanguage = "de"
+#DefaultContentLanguage = "ja"
 title = "SeLi Rahmenbau"
-# for smart copyright line, leave this blank and check [params.copyright]
-copyright = ""
+theme = "beautifulhugo"
+metaDataFormat = "yaml"
+#pygmentsStyle = "trac"
+#pygmentsUseClasses = true
+#pygmentsCodeFences = true
+#pygmentsCodefencesGuessSyntax = true
+#pygmentsUseClassic = true
+#pygmentOptions = "linenos=inline"
+#disqusShortname = "XXX"
+#googleAnalytics = "XXX"
 
-theme = "minimo"
+[Params]
+  homeTitle = "SeLi Rahmenbau" # Set a different text for the header on the home page
+  subtitle = "Fahrradrahmen nach Maß aus Stahl und Edelstahl"
+  logo = "img/logo.png"
+  favicon = "img/favicon.ico"
+  dateFormat = "January 2, 2006"
+  commit = false
+  rss = true
+  comments = false
+  readingTime = true
+  useHLJS = false
+  socialShare = false
+#  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
 
-disqusShortname = ""
-googleAnalytics = ""
+#[[Params.bigimg]]
+#  src = "img/triangle.jpg"
+#  desc = "Triangle"
+#[[Params.bigimg]]
+#  src = "img/sphere.jpg"
+#  desc = "Sphere"
+#  # position: see values of CSS background-position.
+#  position = "center top"
+#[[Params.bigimg]]
+#  src = "img/hexagon.jpg"
+#  desc = "Hexagon"
 
-Paginate = 5
-preserveTaxonomyNames = true
-
-enableRobotsTXT = true # generate robots.txt
-
-# Syntax Highlighting ( https://gohugo.io/content-management/syntax-highlighting/ )
-pygmentsCodefences = true
-
-enableEmoji = true
-
-# Missing translations will default to this content language
-defaultContentLanguage = "de"
-
-[params.info]
-description = "..nach Maß in Stahl und Edelstahl"
-title404 = "Hier gibt es nichts zu sehen."
-
-[params.assets]
-favicon = "favicon.ico"
-customCSS = ["css/custom.css"]
-customJS = ["js/custom.js"]
-gopher = "" # used in 404 template ( Generator: https://gopherize.me )
-
-[params.copyright]
-prefix = ""
-holder = "Sebastian Lindler"
-startYear = "2018"
-suffix = ""
-
-[params.settings]
-# date & time format: https://golang.org/pkg/time/
-dateFormat = "2006, Jan 02"
-listDateFormat = "2006, Jan 02"
-archiveDateFormat = "Jan 02"
-hideEntryNavigation = ["page"] # boolean / array of sections
-showReadingTime = true
-showLastmod = true
-taxonomyCloudShuffle = true
-accentColor = "#ffcd00"
-hideMainMenu = false
-
-[params.sidebar]
-enable = true
-
-[params.widgets]
-homepage = ["recent_posts"]
-sidebar = ["about","sidebar_menu","taxonomy_cloud"]
-footer = ["social_menu"]
-
-[params.opengraph.facebook]
-admins = [] # array of Facebook IDs
-appID = ""
-pageID = ""
-
-[params.opengraph.twitter]
-page = "" # Twitter page username
-
-[params.seo]
-# Title Separator: - – — · • * ⋆ | ~ « » < >
-titleSeparator = "•"
-
-#[params.social]
-#codepen = "MunifTanjim"
-#email = "contact@example.com"
-#facebook = "MunifTanjim"
-#github = "MunifTanjim"
-#gitlab = "MunifTanjim"
-#instagram = "MunifTanjim"
-#linkedin = "muniftanjim"
-#twitter = "MunifTanjim"
-#telegram = "MunifTanjim"
-#google_scholar = "qc6CJjYAAAAJ"
-#youtube = "UCT-U0rNerYxItGcuoPX-WYA"
-
-[params.comments]
-enable = false
-
-# Isso: https://posativ.org/isso/
-[params.comments.isso]
-enable = false
-scriptSrc = "" # "https://isso.example.com/js/embed.min.js"
-dataAttrs = "" # "data-isso='https://isso.example.com' data-isso-require-author='true'"
-
-[params.comments.staticman]
-enable = true
-apiEndpoint = "https://api.staticman.net/v2/entry"
-maxDepth = 2
-
-[params.comments.staticman.github]
-username = "MunifTanjim"
-repository = "minimo"
-branch = "master"
-
-# Utterances: https://utteranc.es
-[params.comments.utterances]
-enable = false
-issueTerm = "pathname" # pathname / url / title
-
-[params.comments.utterances.github]
-username = "MunifTanjim"
-repository = "minimo"
-
-[params.search]
-client = "" # algolia / fuse / lunr
-
-[params.search.algolia]
-appId = ""
-indexName = ""
-searchApiKey = ""
-
-[taxonomies]
-author = "authors"
-category = "categories"
-series = "series"
-tag = "tags"
-
-[permalinks]
-page = "/:slug/"
+[Author]
+  name = "Sebastian Lindler"
+  website = "https://seli-rahmenbau.de"
+  email = "seli-online@gmx.de"
+#  facebook = "username"
+#  googleplus = "+username" # or xxxxxxxxxxxxxxxxxxxxx
+#  github = "username"
+#  gitlab = "username"
+#  bitbucket = "username"
+#  twitter = "username"
+#  reddit = "username"
+#  linkedin = "username"
+#  xing = "username"
+#  stackoverflow = "users/XXXXXXX/username"
+#  snapchat = "username"
+#  instagram = "username"
+#  youtube = "user/username" # or channel/channelname
+#  soundcloud = "username"
+#  spotify = "username"
+#  bandcamp = "username"
+#  itchio = "username"
+#  vk = "username"
+#  paypal = "username"
+#  telegram = "username"
 
 [[menu.main]]
-name = "Rahmenbau"
-weight = -20
-identifier = "rahmenbau"
-url = "/rahmenbau"
+    name = "Neues"
+    url = "blog"
+    weight = 1
 
 [[menu.main]]
-name = "Kurse"
-weight = -10
-identifier = "kurse"
-url = "/kurse"
+    name = "Impressum"
+    url = "page/impressum/"
+    weight = 3
 
 [[menu.main]]
-name = "Datenschutzerklärung"
-weight = 10
-identifier = "datenschutz"
-url = "/datenschutz"
+    identifier = "rahmenbau"
+    name = "Rahmenbau"
+    weight = 2
 
 [[menu.main]]
-name = "Impressum"
-weight = 20
-identifier = "impressum"
-url = "/impressum"
+    parent = "rahmenbau"
+    name = "Stahl"
+    url = "rahmenbau/stahl"
+    weight = 1
 
 [[menu.main]]
-name = "Kontakt"
-weight = 30
-identifier = "kontakt"
-url = "/kontakt"
+    parent = "rahmenbau"
+    name = "Edelstahl"
+    url = "rahmenbau/edelstahl"
+    weight = 2
 
-[blackfriday]
-hrefTargetBlank = true
-
-[languages]
-# edit this block for your own language
-[languages.en]
-lang = "en"
-languageName = "English"
-
-[languages.de]
-lang = "de"
-languageName = "Deutsch"
+[[menu.main]]
+    parent = "rahmenbau"
+    name = "Kurse"
+    url = "rahmenbau/kurse"
+    weight = 3
